create new employee creation page

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     {% block head %} {% endblock %}
 </head>
 <body>
-    <a href="/run_script">Employee</a>
+    <a href="/select_emp">Employee</a>
     <a href="/run_script">Allowances</a>
     <a href="/run_script">Deduction</a>
     {% block body %}
