complete add new employee

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     {% block head %} {% endblock %}
 </head>
 <body>
+    <a href="/">Home</a>
     <a href="/select_emp">Employee</a>
     <a href="/run_script">Allowances</a>
     <a href="/run_script">Deduction</a>
