--- a/templates/new_employee.html
+++ b/templates/new_employee.html
@@ -6,4 +6,14 @@
 
 {% block body %} 
 <h1>create a new Employee</h1>
+<br>
+<form method="POST" action="/save_emp">
+    <label for="personal_number">Personal Number:</label><br>
+    <input type="text" id="personal_number" name="personal_number" required><br><br>
+
+    <label for="employee_name">Employee Name:</label><br>
+    <input type="text" id="employee_name" name="employee_name" required><br><br>
+
+    <input type="submit" value="Save">
+</form>
 {% endblock %}
